--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,10 +7,11 @@
     font-family: 'Poppins',sans-serif;
 }
 
-body {
+body,html {
+    width: 100%;
+    height: 100%;
     background-image: url(../imagens/background-img.jpg);
     background-size: cover;
-    background-position: top center;
     background-repeat: no-repeat;
 }
 
