--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,8 +16,8 @@ body,html {
 }
 
 .principal {
-    height: 500px;
-    width: 300px;
+    height: 31.25em;
+    width: 18.75em;
     background-color: #fff;
     padding: 10px;
     border-radius: 10px;
@@ -36,7 +36,6 @@ body,html {
 }
 
 .form {
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,7 +47,6 @@ body,html {
     display: flex;
     gap: 10px;
     border-bottom: 1px solid black;
-    
 }
 
 .campo-login input {
