--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,6 +8,9 @@
 }
 
 body,html {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
     background-image: url(../imagens/background-img.jpg);
@@ -22,10 +25,10 @@ body,html {
     padding: 1.25em;
     border-radius: 10px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.466);
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); */
   
 }
 
