--- a/estilos/style.css
+++ b/estilos/style.css
@@ -90,3 +90,10 @@ body,html {
     color:#000;
     transition: .5s;
 }
+
+#icone_senha {
+    width: 30px;
+    border: none;
+    cursor: pointer;
+    padding-bottom: 5px;
+}
